--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,12 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+.child{
+   display: inline-block; 
+   padding: 100px;
+   margin-top: -100px;
+   margin-left: 150px;
+}
 
 body {
     background: #ecf0f3;
